API up and running.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
   </head>
   <body ng-controller="mainCtrl">
 
-    <div ng-repeat="artist in lyrics">
-
-    </div>
+    {{lyrics.lyrics_body}}
 
   </body>
   <script
@@ -18,7 +16,7 @@
   crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
   <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
-  <script src="./js/animations.js"></script>
+  <!-- <script src="./js/animations.js"></script> -->
   <script src="./js/app.js"></script>
   <script src="./js/mainCtrl.js"></script>
   <script src="./js/lyricService.js"></script>
