--- a/index.html
+++ b/index.html
@@ -3,21 +3,46 @@
   <head>
     <meta charset="utf-8">
     <title>Lyric Game</title>
-    <link rel="stylesheet" href="/css/style.css" media="screen" title="no title">
+    <!-- RESET FILE -->
+    <link rel="stylesheet" href="stevensReset.css" media="screen" title="no title">
+    <link rel="stylesheet" href="style.css" media="screen" title="no title">
+
+    <!-- VIEW STYLES -->
+    <link rel="stylesheet" href="./home/styleHome.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./game/styleGame.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./end/styleEnd.css" media="screen" title="no title">
+
   </head>
   <body ng-controller="mainCtrl">
+    <header>
+      <h4 id="score">SCORE PLACEHOLDER</h4>
+      <i class="fa fa-bars fa-4x" id='nav-icon'></i>
+      <div class='nav-menu'>
+        <a ui-sref='home'>Home</a>
+        <a ui-sref='game'>Game</a>
+        <a ui-sref='end'>End</a>
+      </div>
+    </header>
 
-    {{lyrics.lyrics_body}}
+    <main>
+      <ui-view><ui-view>
+    </main>
 
   </body>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
   <script
   src="https://code.jquery.com/jquery-3.1.1.js"
   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
   crossorigin="anonymous"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
   <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
-  <!-- <script src="./js/animations.js"></script> -->
+  <script src="https://use.fontawesome.com/b3416c175c.js"></script>
+  <script src="./js/animations.js"></script>
   <script src="./js/app.js"></script>
   <script src="./js/mainCtrl.js"></script>
   <script src="./js/lyricService.js"></script>
+  <script src='./home/homeCtrl.js'></script>
+  <script src="./game/gameCtrl.js"></script>
+  <script src='./end/endCtrl.js'></script>
+  <script src="./game/questionDirective.js"></script>
 </html>
