Have scoring and gameplay working perfectly.

--- a/game/game.html
+++ b/game/game.html
@@ -1,6 +1,6 @@
 <section class="game-main-container">
 
 
-  <show-question></show-question>
+  <div class="question" show-question></div>
 
 </section>
