Game fully working, all that's left is to make it look good.

--- a/home/home.html
+++ b/home/home.html
@@ -1,1 +1,12 @@
 <p>{{message}}</p>
+<button class="home-button" ng-click="newGame('us')"><div id="us-div">United States</div></button>
+<button class="home-button" ng-click="newGame('ca')">Canada</button>
+<button class="home-button" ng-click="newGame('au')">Australia</button>
+<button class="home-button" ng-click="newGame('de')">Deutschland</button>
+<button class="home-button" ng-click="newGame('es')">España</button>
+<button class="home-button" ng-click="newGame('fi')">Suomi</button>
+<button class="home-button" ng-click="newGame('it')">Italia</button>
+<button class="home-button" ng-click="newGame('pt')">Portugal</button>
+<button class="home-button" ng-click="newGame('gb')">Great Britain</button>
+<button class="home-button" ng-click="newGame('gr')">Ελλάδα</button>
+<button class="home-button" ng-click="newGame('nl')">Nederland</button>
