--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <div class='nav-menu'>
         <a ui-sref='home'>Home</a>
         <a ui-sref='game' id="game-nav">Game</a>
-        <a ui-sref='end'>End</a>
+        <a href="" ng-click="endIt()">End</a>
       </div>
     </header>
 
@@ -28,6 +28,7 @@
     <main>
       <ui-view><ui-view>
     </main>
+
 
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.js"></script>
