Added video background, and gulp and gitignore.

--- a/home/home.html
+++ b/home/home.html
@@ -5,16 +5,16 @@
     <p>Welcome to the Lyrics Game! Pick the country you'd like to play with, and check the rules section in the upper right menu for more information</p>
     <div class="all-home-buttons">
         <button class="home-button" ng-click="newGame('us')"><div class="inner-button-div" id="us-div" ng-mouseover="">United States</div></button>
-        <button class="home-button" ng-click="newGame('ca')">Canada</button>
-        <button class="home-button" ng-click="newGame('au')">Australia</button>
-        <button class="home-button" ng-click="newGame('de')">Deutschland</button>
-        <button class="home-button" ng-click="newGame('es')">España</button>
-        <button class="home-button" ng-click="newGame('fi')">Suomi</button>
-        <button class="home-button" ng-click="newGame('it')">Italia</button>
-        <button class="home-button" ng-click="newGame('pt')">Portugal</button>
-        <button class="home-button" ng-click="newGame('gb')">Great Britain</button>
-        <button class="home-button" ng-click="newGame('gr')">Ελλάδα</button>
-        <button class="home-button" ng-click="newGame('nl')">Nederland</button>
+        <button class="home-button" ng-click="newGame('ca')"><div class="inner-button-div" id="ca-div" ng-mouseover="">Canada</div></button>
+        <button class="home-button" ng-click="newGame('au')"><div class="inner-button-div" id="au-div" ng-mouseover="">Australia</button>
+        <button class="home-button" ng-click="newGame('de')"><div class="inner-button-div" id="de-div" ng-mouseover="">Deutschland</button>
+        <button class="home-button" ng-click="newGame('es')"><div class="inner-button-div" id="es-div" ng-mouseover="">España</button>
+        <button class="home-button" ng-click="newGame('fi')"><div class="inner-button-div" id="fi-div" ng-mouseover="">Suomi</button>
+        <button class="home-button" ng-click="newGame('it')"><div class="inner-button-div" id="it-div" ng-mouseover="">Italia</button>
+        <button class="home-button" ng-click="newGame('pt')"><div class="inner-button-div" id="pt-div" ng-mouseover="">Portugal</button>
+        <button class="home-button" ng-click="newGame('gb')"><div class="inner-button-div" id="gb-div" ng-mouseover="">Great Britain</button>
+        <button class="home-button" ng-click="newGame('gr')"><div class="inner-button-div" id="gr-div" ng-mouseover="">Ελλάδα</button>
+        <button class="home-button" ng-click="newGame('nl')"><div class="inner-button-div" id="nl-div" ng-mouseover="">Nederland</button>
     </div>
 
 </section>
