Did basic styling through whole app.

--- a/game/question.html
+++ b/game/question.html
@@ -1,4 +1,4 @@
-<div class='lyrics'>{{lyrics.lyrics}}</div>
+<div class='lyrics'><p>{{lyrics.lyrics}}<p></div>
 
 <div class="answer-div">
   <button class="answers" id='answer1' ng-click="correctAnswer()">correctArtist</button>
