--- a/index.html
+++ b/index.html
@@ -5,7 +5,11 @@
     <title>Lyric Game</title>
     <!-- RESET FILE -->
     <link rel="stylesheet" href="stevensReset.css" media="screen" title="no title">
-    <link rel="stylesheet" href="style.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./styles/style.css" media="screen" title="no title">
+
+    <!-- FONT FILES -->
+    <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps|Noto+Sans:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/fonts.css" media="screen" title="no title">
 
     <!-- VIEW STYLES -->
     <link rel="stylesheet" href="./home/styleHome.css" media="screen" title="no title">
