--- a/game/question.html
+++ b/game/question.html
@@ -1,7 +1,7 @@
 <div class='lyrics'><p>{{lyrics.lyrics}}<p></div>
 
 <div class="answer-div">
-  <button class="answers" id='answer1' ng-click="correctAnswer()">correctArtist</button>
+  <button class="answers" id='answer1' ng-click="correctAnswer()">{{correctArtist}}</button>
   <button class='answers' id="answer2" ng-click="incorrectAnswer()">{{randomArtist1}}</button>
   <button class='answers' id="answer3" ng-click="incorrectAnswer()">{{randomArtist2}}</button>
 </div>
