Got rules page and new game button set up, and styled the buttons.

--- a/end/end.html
+++ b/end/end.html
@@ -1,5 +1,5 @@
 <section class="end-text">
 <p>{{message}}</p>
 
-<button ur-sref="home" id='end-button'>New Game?</button>
+<button ui-sref="home" id='end-button' ng-click="reset()">New Game?</button>
 </section>
