--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
   <body ng-controller="mainCtrl" ng-cloak>
 
     <div class='video-background'>
-      <!-- <video loop muted autoplay poster='./images/blakey_snapshot.png' class='fullscreen-video'>
+      <video loop muted autoplay poster='./images/blakey_snapshot.png' class='fullscreen-video'>
         <source src="./images/blakey_cut.mp4" type="video/mp4">
-      </video> -->
+      </video>
     </div>
 
     <header>
@@ -30,7 +30,7 @@
       <div id="menu-container">
         <i class="fa fa-bars fa-2x" id='nav-icon'></i>
         <div class='nav-menu'>
-          <a ui-sref='home'>Home</a>
+          <a ui-sref='home' ng-click="reset()">Home</a>
           <a ui-sref='game' id="game-nav">Game</a>
           <a href="" ng-click="endIt()">End</a>
           <a href="" id='rules-link'>Rules</a>
