Fixed link to font file.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <!-- FONT FILES -->
     <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps|Noto+Sans:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="/styles/fonts.css" media="screen" title="no title">
+    <link rel="stylesheet" href="./styles/fonts.css" media="screen" title="no title">
 
     <!-- VIEW STYLES -->
     <link rel="stylesheet" href="./home/styleHome.css" media="screen" title="no title">
