Now maybe the queries work?

--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html ng-app="app">
   <head>
     <meta charset="utf-8">
+
+    <!-- Have to put this in here so that the device width registers on mobile and the media queries work properly. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title>Lyric Game</title>
     <!-- RESET FILE -->
     <link rel="stylesheet" href="stevensReset.css" media="screen" title="no title">
