Fixed fonts and buttons for mobile.

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./styles/fonts.css" media="screen" title="no title">
 
     <!-- VIEW STYLES -->
+    <link rel="stylesheet" href="./styles/mobile.css" media="(max-device-width: 767px), (max-width: 767px)" title="no title">
     <link rel="stylesheet" href="./home/styleHome.css" media="screen" title="no title">
     <link rel="stylesheet" href="./game/styleGame.css" media="screen" title="no title">
     <link rel="stylesheet" href="./end/styleEnd.css" media="screen" title="no title">
