Don't know what I did but I did it.

--- a/end/end.html
+++ b/end/end.html
@@ -1,5 +1,5 @@
 <section class="end-text">
-<p>{{message}}</p>
+<p rainbow>{{message}}</p>
 
-<button ui-sref="home" id='end-button' ng-click="reset()">New Game?</button>
+<button ui-sref="home" id='end-button' ng-click="reset()" rainbow>New Game?</button>
 </section>
