Done for the day.

--- a/index.html
+++ b/index.html
@@ -74,4 +74,5 @@
   <script src='./end/endCtrl.js'></script>
   <script src="./game/questionDirective.js"></script>
   <script src="./js/rainbowDirective.js"></script>
+  <script src="./js/rainbowService.js"></script>
 </html>
