Attempt one to get rainbow working consistently was a failure, but I'm not willing to erase it entirely.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
   </head>
   <body ng-controller="mainCtrl" ng-cloak>
 
-    <div class='video-background'>
+    <!-- <div class='video-background'>
       <video loop muted autoplay poster='./images/blakey_snapshot.png' class='fullscreen-video'>
         <source src="./images/blakey_cut.mp4" type="video/mp4">
       </video>
-    </div>
+    </div> -->
 
     <header>
       <h4 id="score">{{score}}</h4>
