--- a/game/question.html
+++ b/game/question.html
@@ -1,7 +1,7 @@
-<div class='lyrics-container'><p id="lyrics" rainbow>{{lyrics.lyrics}}<p></div>
+<div class='lyrics-container'><p id="lyrics">{{lyrics.lyrics}}<p></div>
 
 <div class="answer-div">
-  <button class="answers" id='answer1' ng-click="correctAnswer()" rainbow>correctArtist</button>
-  <button class='answers' id="answer2" ng-click="incorrectAnswer()" rainbow>{{randomArtist1}}</button>
-  <button class='answers' id="answer3" ng-click="incorrectAnswer()" rainbow>{{randomArtist2}}</button>
+  <button class="answers" id='answer1' ng-click="correctAnswer()">correctArtist</button>
+  <button class='answers' id="answer2" ng-click="incorrectAnswer()">{{randomArtist1}}</button>
+  <button class='answers' id="answer3" ng-click="incorrectAnswer()">{{randomArtist2}}</button>
 </div>
