An acceptable mvp.

--- a/game/game.html
+++ b/game/game.html
@@ -1,5 +1,9 @@
 <section class="game-main-container">
 
+  <div class="question-score-div">
+    <h1 class="score-counter">Score: {{score}}</h1>
+    <h1 class="question-counter">Question: {{currentQuestion}}</h1>
+  </div>
 
   <div class="question" show-question></div>
 
