--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <header>
-      <h4 id="score">{{score}}</h4>
+      <!-- <h4 id="score">{{score}}</h4> -->
       <div id="menu-container">
         <i class="fa fa-bars fa-2x" id='nav-icon'></i>
         <div class='nav-menu'>
