Fixing some bugs.

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   src="https://code.jquery.com/jquery-3.1.1.js"
   integrity="sha256-16cdPddA6VdVInumRGo6IbivbERE8p7CQR3HzTBuELA="
   crossorigin="anonymous"></script>
-  <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script>
+  <!-- <script type="text/javascript" src="http://tracking.musixmatch.com/t1.0/AMa6hJCIEzn1v8RuOP"></script> -->
   <script src="https://use.fontawesome.com/b3416c175c.js"></script>
   <script src="./js/animations.js"></script>
   <script src="./js/app.js"></script>
