--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <i class="fa fa-bars fa-2x" id='nav-icon'></i>
         <div class='nav-menu'>
           <a ui-sref='home' ng-click="reset()" rainbow>Home</a>
-          <a ui-sref='game' id="game-nav" rainbow>Game</a>
-          <a href="" ng-click="endIt()" rainbow>End</a>
+          <!-- <a ui-sref='game' id="game-nav" rainbow>Game</a>
+          <a href="" ng-click="endIt()" rainbow>End</a> -->
           <a href="" id='rules-link' rainbow>Rules</a>
         </div>
       </div>
