I have the basic bounce working.

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./game/styleGame.css" media="screen" title="no title">
     <link rel="stylesheet" href="./end/styleEnd.css" media="screen" title="no title">
     <link rel="stylesheet" href="./styles/mobile.css" media="(max-device-width: 767px), (max-width: 767px)" title="no title">
+    <link rel="stylesheet" href="./styles/buttonBounce.css" media="screen" title="no title">
 
 
   </head>
