Right and wrong answer button animations complete.

--- a/game/question.html
+++ b/game/question.html
@@ -2,6 +2,6 @@
 
 <div class="answer-div">
   <button class="answers" id='answer1' ng-click="correctAnswer()" rainbow>correctArtist</button>
-  <button class='answers' id="answer2" ng-click="incorrectAnswer()" rainbow>{{randomArtist1}}</button>
-  <button class='answers' id="answer3" ng-click="incorrectAnswer()" rainbow>{{randomArtist2}}</button>
+  <button class='answers incorrect-answer' id="answer2" ng-click="incorrectAnswer()" rainbow>{{randomArtist1}}</button>
+  <button class='answers incorrect-answer' id="answer3" ng-click="incorrectAnswer()" rainbow>{{randomArtist2}}</button>
 </div>
