--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./styles/style.css" media="screen" title="no title">
 
     <!-- FONT FILES -->
-    <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps|Noto+Sans:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Bilbo+Swash+Caps|Noto+Sans:400,700|Roboto+Slab" rel="stylesheet">
     <link rel="stylesheet" href="./styles/fonts.css" media="screen" title="no title">
 
     <!-- VIEW STYLES -->
