Unless I can get the rainbow directive working perfectly properly, this will be my official hosted version.

--- a/end/end.html
+++ b/end/end.html
@@ -1,5 +1,5 @@
 <section class="end-text">
-<p rainbow>{{message}}</p>
+<p class='final-text' rainbow>Your score is {{score}}. {{message}}</p>
 
 <button ui-sref="home" id='end-button' ng-click="reset()" rainbow>New Game?</button>
 </section>
