Didn't make much progress.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
 
   </head>
-  <body ng-controller="mainCtrl" ng-cloak>
+  <body ng-controller='mainCtrl' ng-cloak>
 
     <div class='video-background'>
       <video loop muted autoplay poster='./images/blakey_snapshot.png' class='fullscreen-video'>
