--- a/home/home.html
+++ b/home/home.html
@@ -2,7 +2,7 @@
 
     <!--Offset the words here and make them a big, curly font maybe-->
     <div id="game-title-container"><h1 id="game-title">The Lyrics Game!</h1></div>
-    <div id="intro-text"><p rainbow>Welcome to the Lyrics Game! Pick the country you'd like to play with, and check the rules section in the upper right menu for more information</p></div>
+    <div id="intro-text"><p rainbow>Welcome to the Lyrics Game! Pick the country you'd like to play with, and check the rules section in the upper right menu for more information.</p></div>
     <div class="all-home-buttons">
         <button class="home-button" ng-click="newGame('us')"><div class="inner-button-div" id="us-div" rainbow>United States</div></button>
         <button class="home-button" ng-click="newGame('ca')"><div class="inner-button-div" id="ca-div" rainbow>Canada</div></button>
